[gd_scene load_steps=5 format=3 uid="uid://c1cft1gcgsd4p"]

[ext_resource type="AudioStream" uid="uid://ce2b7aqjdbgsc" path="res://three_bit_v1.mp3" id="1_brj4x"]
[ext_resource type="Script" path="res://music_mixer.gd" id="1_bxmry"]
[ext_resource type="AudioStream" uid="uid://cu8kgeaksf0xg" path="res://DeeCipher - Title.mp3" id="3_d1jqj"]
[ext_resource type="AudioStream" uid="uid://cbdi1qdx7nedv" path="res://Kaizo Core.mp3" id="3_ujci3"]

[node name="MusicMixer" type="Node"]
script = ExtResource("1_bxmry")

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_brj4x")
volume_db = -5.0

[node name="TitleMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_d1jqj")
volume_db = -7.0

[node name="KaizoMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ujci3")
volume_db = -5.0
